syntax = "proto3";

package ai.sentient.echo;

import "google/protobuf/timestamp.proto";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
  google.protobuf.Timestamp date_time = 2;
  
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}
